log
Fri 10 May 2024 10:23:19 PM UTC: 
 tests:  1|8
total_score: 0/70
ea52977
Sat 11 May 2024 02:14:37 AM UTC: 
 treemap.c | 47 ++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 46 insertions(+), 1 deletion(-)
 tests:  0|8
total_score: 0/70
504242a
Sat 11 May 2024 02:19:48 AM UTC: 
 treemap.c | 49 ++++++++-----------------------------------------
 1 file changed, 8 insertions(+), 41 deletions(-)
 tests:  4|7
total_score: 5/70
ef29299
Sat 11 May 2024 02:20:03 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a6168ac
Sat 11 May 2024 02:36:36 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   55 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
7644d60
Sat 11 May 2024 02:38:13 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:68:17: error: ‘parent’ undeclared (first use in this function)
   68 |                 parent = current;
      |                 ^~~~~~
treemap.c:68:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
87024ee
Sat 11 May 2024 02:38:52 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:16: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   55 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
feb9cce
Sat 11 May 2024 05:15:22 PM UTC: 
 treemap.c | 36 ++++++++++++++++++++++--------------
 1 file changed, 22 insertions(+), 14 deletions(-)
 tests:  6|6
total_score: 15/70
9b93eb5
Sat 11 May 2024 05:16:17 PM UTC: 
 treemap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  6|6
total_score: 15/70
c7d9890
Sat 11 May 2024 05:16:50 PM UTC: 
 treemap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  6|6
total_score: 15/70
49c8225
